Fix input size on Firefox

--- a/style.css
+++ b/style.css
@@ -89,11 +89,7 @@ body, html {
 
 #hero #hero-content #signup-form input:focus,
 #hero #hero-content #signup-form button:hover {
-  border: 2px solid rgba(0, 198, 255, 1);
-}
-
-#hero #hero-content #signup-form button:hover {
-  color: rgba(0, 198, 255, 1);
+  background: rgba(0, 198, 255, 0.3);
   border: 2px solid rgba(0, 198, 255, 1);
 }
 
@@ -370,7 +366,7 @@ footer a {
 
 @media (min-width: 768px) {
   html, body {
-    font-size: 11px;
+    font-size: 12px;
   }
 
   #hero #hero-content #signup-form input,
@@ -379,6 +375,10 @@ footer a {
     width: auto;
     margin: 0.2em 0.2em;
     font-size: 1.3rem;
+  }
+
+  #hero #hero-content #signup-form input {
+    width: 25em;
   }
 }
 
